--- a/tic-tac-toe-main/game.html
+++ b/tic-tac-toe-main/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FR-fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,11 +11,11 @@
 			<nav>
 				<img src="./assets/logo.svg" alt="" />
 				<div class="turn-div">
-					<img src="/assets/croix.svg" alt="" />
+					<img src="./assets/croix.svg" alt="" />
 					<span>TURN</span>
 				</div>
 				<button class="btn-reset">
-					<img src="/assets/reset-arrow.svg" alt="" />
+					<img src="./assets/reset-arrow.svg" alt="" />
 				</button>
 			</nav>
 		</header>
@@ -45,10 +45,34 @@
 					<span>11</span>
 				</div>
 			</section>
+			<div class="overlay-start-game">
+				<img src="./assets/logo.svg" alt="" />
+				<section class="sec-select">
+					<h3>PICK PLAYER 1’S MARK</h3>
+					<div class="div-select-btn">
+						<button class="btn-croix-select">
+							<img
+								class="imgjsp"
+								id="croix-img"
+								src="./assets/croix.svg"
+								alt=""
+							/></button
+						><button class="btn-rond-select">
+							<img class="imgjsp2" src="./assets/Oval Copy.svg" alt="" />
+						</button>
+					</div>
+					<span>REMEMBER : X GOES FIRST</span>
+				</section>
+				<div class="gap-btn-index">
+					<button class="btn-yellow">NEW GAME (VS CPU)</button>
+
+					<button class="btn-blue">NEW GAME (VS PLAYER)</button>
+				</div>
+			</div>
 		</main>
-			<!-- Popup
+		<!-- Popup
 			 
-			<div class="popup">
+			<div class="popup" class="popupO">
 				<p>OH NO, YOU LOST...</p>
 				<div class="popup-take-round">
 					<img src="./assets/Oval Copy2.svg" alt="">
@@ -57,7 +81,7 @@
 				<button id="closePopup">QUIT</button>
 				<button id="closePopup1">NEXT ROUND</button>
 			</div>
-			<div class="popup">
+			<div class="popup" class="popupX">
 				<p>YOU WON!</p>
 				<div class="popup-take-round">
 					<img src="./assets/Combined Shape Copy 2.svg" alt="">
@@ -95,6 +119,6 @@
 				<button id="closePopup1">NEXT ROUND</button>
 			</div>
 		-->
-<script src="./main.js"></script>
+		<script src="./main.js"></script>
 	</body>
 </html>
