--- a/tic-tac-toe-main/index.html
+++ b/tic-tac-toe-main/index.html
@@ -21,11 +21,11 @@
 				<span>REMEMBER : X GOES FIRST</span>
 			</section>
 			<div class="gap-btn-index">
-			<a href="./game.html"><button class="btn-yellow">NEW GAME (VS CPU)</button></a>
-			<button class="btn-blue">NEW GAME (VS PLAYER)</button>
-		</div>
+				<a href="./game.html"
+					><button class="btn-yellow">NEW GAME (VS CPU)</button></a
+				>
+				<button class="btn-blue">NEW GAME (VS PLAYER)</button>
+			</div>
 		</main>
-
-
 	</body>
 </html>
